--- a/admin/app/components/target-profiles/badges.hbs
+++ b/admin/app/components/target-profiles/badges.hbs
@@ -6,7 +6,7 @@
           <tr>
             <th class="badges-table__id">ID</th>
             <th class="badges-table__image">Image</th>
-            <th class="badges-table__key">Key</th>
+            <th class="badges-table__key">Clé</th>
             <th class="badges-table__name">Nom</th>
             <th>Message</th>
             <th class="badges-table__actions">Actions</th>
