--- a/admin/app/components/target-profiles/stages.hbs
+++ b/admin/app/components/target-profiles/stages.hbs
@@ -12,7 +12,7 @@
             <tr>
               <th class="stages-table__id">ID</th>
               <th class="stages-table__image">Image</th>
-              <th class="stages-table__threshold">Threshold</th>
+              <th class="stages-table__threshold">Seuil</th>
               <th class="stages-table__title">Titre</th>
               <th>Message</th>
               <th class="stages-table__actions">Actions</th>
