Display badgePartnerCompetences within the badge criterion row
Co-authored-by: Guillaume Lagorce <guillaume.lagorce@pix.fr>
Co-authored-by: Thomas Evano <thomas.evano@pix.fr>

--- a/admin/app/components/badges/badge.hbs
+++ b/admin/app/components/badges/badge.hbs
@@ -41,17 +41,20 @@
         <tbody>
           {{#each @badge.badgeCriteria as |criterion|}}
             <tr>
-              <td>{{criterion.scope}}</td>
+              <td>{{criterion.scope}}
+                {{#if criterion.partnerCompetences}}
+                  <ul>
+                    {{#each criterion.partnerCompetences as |badgePartnerCompetence|}}
+                      <li>{{badgePartnerCompetence.name}}</li>
+                    {{/each}}
+                  </ul>
+                {{/if}}
+              </td>
               <td>{{criterion.threshold}}</td>
             </tr>
           {{/each}}
         </tbody>
       </table>
-      <ul>
-      {{#each @badge.badgePartnerCompetences as |badgePartnerCompetence|}}
-        <li>{{badgePartnerCompetence.name}}</li>
-      {{/each}}
-      </ul>
     </div>
   </section>
 </main>
