--- a/mon-pix/app/templates/user-account/connection-methods.hbs
+++ b/mon-pix/app/templates/user-account/connection-methods.hbs
@@ -1,1 +1,9 @@
-{{outlet}}
+{{#if this.isEmailEditionMode}}
+  <div class="user-account__update-email">
+    <UserAccountUpdateEmail @saveNewEmail={{this.saveNewEmail}} @disableEmailEditionMode={{this.disableEmailEditionMode}} />
+  </div>
+{{else}}
+  <div class="user-account__connection-methods">
+    <UserAccountConnexionMethods @user={{@model}} @enableEmailEditionMode={{this.enableEmailEditionMode}} />
+  </div>
+{{/if}}
