[APP] Update my account page design

--- a/mon-pix/app/styles/components/_form-textfield.scss
+++ b/mon-pix/app/styles/components/_form-textfield.scss
@@ -67,6 +67,17 @@
   background-color: $grey-20;
 }
 
+.form-textfield__input-container--password {
+
+  .form-textfield__input {
+    width: calc(100% - 42px);
+  }
+
+  .form-textfield__icon {
+    width: 42px;
+  }
+}
+
 .form-textfield__input-field-container input {
   height: 40px;
   flex-grow: 1;
