--- a/mon-pix/app/templates/components/form-textfield.hbs
+++ b/mon-pix/app/templates/components/form-textfield.hbs
@@ -5,7 +5,9 @@
     <br><span class="form-textfield__help">{{help}}</span>
 </label>
 
-<div class="form-textfield__input-field-container {{if disabled "form-textfield__input-container--disabled" inputContainerStatusClass}}">
+<div class="form-textfield__input-field-container
+  {{if disabled "form-textfield__input-container--disabled" inputContainerStatusClass}}
+  {{if isPassword "form-textfield__input-container--password"}}">
   <Input @type={{textfieldType}}
          id={{textfieldName}}
          name={{textfieldName}}
