[APP] Add an update translations

--- a/mon-pix/app/templates/user-account.hbs
+++ b/mon-pix/app/templates/user-account.hbs
@@ -13,10 +13,10 @@
           <PixBlock class="user-account__menu-block">
             <nav class="user-account-menu">
               <LinkTo @route="user-account.personal-information" class="user-account-menu__link">
-                <FaIcon @icon='user' /> Informations personnelles
+                <FaIcon @icon='user' /> {{t 'pages.user-account.personal-information'}}
               </LinkTo>
               <LinkTo @route="user-account.connection-methods" class="user-account-menu__link">
-                <FaIcon @icon='link' /> Méthodes de connexion
+                <FaIcon @icon='link' /> {{t 'pages.user-account.connexion-methods'}}
               </LinkTo>
             </nav>
           </PixBlock>
