[APP] Prise en compte des retours

--- a/mon-pix/app/styles/components/_user-account.scss
+++ b/mon-pix/app/styles/components/_user-account.scss
@@ -4,7 +4,7 @@
     margin: 0 0 8px;
     padding-top: 55px;
     padding-bottom: 26px;
-    font-family: $font-open-sans;
+    font-weight: $font-light;
     color: $white;
     position: relative;
     right: 0;
@@ -37,22 +37,27 @@
       display: flex;
       flex-direction: column;
 
-      &__link {
-        color: $grey-45;
-        padding: 16px 60px 16px 20px;
+      ul li {
         border-bottom: 1.5px solid $grey-10;
+        border-radius: 4px;
 
-        svg {
-          margin-right: 8px;
-        }
-
-        &:first-child {
+        &:first-child a {
           border-radius: 4px 4px 0 0;
         }
 
-        &:last-child {
+        &:last-child a {
           border-radius: 0 0 4px 4px;
           border-bottom: none;
+        }
+      }
+
+      &__link {
+        display: block;
+        color: $grey-60;
+        padding: 16px 60px 16px 20px;
+
+        svg {
+          margin-right: 8px;
         }
 
         &:hover {
@@ -71,10 +76,12 @@
   }
 
   &__content.pix-block {
-    margin: 0 20px;
-    min-width: 645px;
+    margin-left: 40px;
+    width: 645px;
+    height: max-content;
 
     @include device-is('mobile') {
+      margin-left: 0;
       min-width: 100%;
       max-width: 100%;
     }
