Use 'contains' instead of 'find' with 'data-test' in tests

--- a/mon-pix/app/components/dashboard/content.hbs
+++ b/mon-pix/app/components/dashboard/content.hbs
@@ -113,7 +113,7 @@
     {{/if}}
 
     {{#if this.hasImprovableCompetences}}
-      <section class="dashboard-content-main__section" data-test-improvable-competences>
+      <section class="dashboard-content-main__section">
         <div class="dashboard-content-main-section--with-button">
           <div>
             <h2 class="dashboard-content-main-section__title">{{t 'pages.dashboard.improvable-competences.title'}}</h2>
