--- a/admin/app/styles/app.scss
+++ b/admin/app/styles/app.scss
@@ -24,6 +24,7 @@
 @import 'authenticated/certifications/index';
 @import 'authenticated/certifications/certification/details';
 @import 'authenticated/certifications/certification/informations';
+@import 'authenticated/certifications/certification/neutralization';
 @import 'authenticated/certification-center/index';
 @import 'authenticated/organizations/get';
 @import 'authenticated/sessions/list';
