--- a/mon-pix/app/templates/user-account/personal-information.hbs
+++ b/mon-pix/app/templates/user-account/personal-information.hbs
@@ -1,3 +1,27 @@
-<div class="user-account__panel">
-  <UserAccountPanel @user={{@model}} />
+<div class="personal-information">
+  <div class="personal-information-item">
+    <p class="form-textfield__label personal-information-item__label">
+      {{t 'pages.user-account.account-panel.first-name'}}
+    </p>
+    <p class="personal-information-item__value" data-test-firstName>{{@model.firstName}}</p>
+  </div>
+
+  <div class="personal-information-item">
+    <p class="form-textfield__label personal-information-item__label">
+      {{t 'pages.user-account.account-panel.last-name'}}
+    </p>
+    <p class="personal-information-item__value" data-test-lastName>{{@model.lastName}}</p>
+  </div>
+
+  {{#if this.displayLanguageSwitch}}
+    <div class="personal-information-item">
+      <p class="form-textfield__label personal-information-item__label">{{t 'pages.user-account.account-panel.lang'}}</p>
+      <PixSelect
+        class="personal-information-item__select"
+        @options={{this.options}}
+        @onChange={{this.onChangeLang}}
+        @selectedOption={{@model.lang}}
+        data-test-lang />
+    </div>
+  {{/if}}
 </div>
