lint: add exception due to a bug where `@id!==id`

--- a/mon-pix/app/templates/components/form-textfield-date.hbs
+++ b/mon-pix/app/templates/components/form-textfield-date.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable require-input-label --}}
 <div class="form-textfield">
   <label class="form-textfield__label">
     {{#if @require}}<abbr title="{{t 'common.form.mandatory'}}" class="mandatory-mark">*</abbr> {{/if}}
