[APP] Reorganize translations

--- a/mon-pix/app/templates/user-account.hbs
+++ b/mon-pix/app/templates/user-account.hbs
@@ -15,12 +15,12 @@
               <ul>
                 <li>
                   <LinkTo @route="user-account.personal-information" class="user-account-menu__link">
-                    <FaIcon @icon='user' /> {{t 'pages.user-account.personal-information'}}
+                    <FaIcon @icon='user' /> {{t 'pages.user-account.personal-information.menu-link-title'}}
                   </LinkTo>
                 </li>
                 <li>
                   <LinkTo @route="user-account.connection-methods" class="user-account-menu__link">
-                    <FaIcon @icon='link' /> {{t 'pages.user-account.connexion-methods'}}
+                    <FaIcon @icon='link' /> {{t 'pages.user-account.connexion-methods.menu-link-title'}}
                   </LinkTo>
                 </li>
                 {{#if this.displayLanguageSwitch}}
