--- a/mon-pix/app/templates/user-account/language.hbs
+++ b/mon-pix/app/templates/user-account/language.hbs
@@ -1,5 +1,5 @@
 <div class="personal-information-item">
-  <p class="form-textfield__label personal-information-item__label">{{t 'pages.user-account.account-panel.lang'}}</p>
+  <p class="form-textfield__label personal-information-item__label">{{t 'pages.user-account.language.lang'}}</p>
   <PixSelect
     class="personal-information-item__select"
     @options={{this.options}}
