--- a/mon-pix/app/styles/app.scss
+++ b/mon-pix/app/styles/app.scss
@@ -130,6 +130,7 @@ of an adaptative/mobile-first approach — refactoring is welcome here */
 @import 'pages/user-tests';
 @import 'pages/personal-information';
 @import 'pages/connexion-methods';
+@import 'pages/language';
 
 * {
   box-sizing: border-box;
