[APP] Add icon for logout link in the burger menu

--- a/mon-pix/app/styles/components/_navbar-burger-menu.scss
+++ b/mon-pix/app/styles/components/_navbar-burger-menu.scss
@@ -60,6 +60,13 @@
   }
 }
 
+.navbar-burger-menu-user-info-item-logout {
+
+  &__icon {
+    margin-right: 6px;
+  }
+}
+
 .navbar-burger-menu-navigation {
   margin-bottom: auto;
 
