--- a/mon-pix/app/templates/components/navbar-burger-menu.hbs
+++ b/mon-pix/app/templates/components/navbar-burger-menu.hbs
@@ -49,6 +49,7 @@
   </a>
 
   <LinkTo @route="logout" class="navbar-burger-menu-user-info__item navbar-burger-menu-user-info-item__logout">
+    <FaIcon @icon="power-off" class="navbar-burger-menu-user-info-item-logout__icon"/>
     {{t 'navigation.user.sign-out'}}
   </LinkTo>
 </div>
