[Admin] Remove "WIP" from tab name

--- a/admin/app/templates/authenticated/certifications/certification.hbs
+++ b/admin/app/templates/authenticated/certifications/certification.hbs
@@ -3,7 +3,7 @@
     Informations
   </LinkTo>
   <LinkTo @route="authenticated.certifications.certification.neutralization" class="navbar-item">
-    Neutralisation<br />(en chantier)
+    Neutralisation
   </LinkTo>
   <LinkTo @route="authenticated.certifications.certification.details" @model={{@model.id}} class="navbar-item">
     Détails
