Create a reset expired password demand in component

--- a/mon-pix/app/templates/update-expired-password.hbs
+++ b/mon-pix/app/templates/update-expired-password.hbs
@@ -1,4 +1,4 @@
 {{page-title (t 'pages.update-expired-password.title')}}
 <div class="update-expired-password-form-page">
-  <UpdateExpiredPasswordForm @user={{@model}} />
+  <UpdateExpiredPasswordForm @resetExpiredPasswordDemand={{@model}} />
 </div>
