[ORGA] added filter by student number to controller

--- a/orga/app/templates/authenticated/sup-students/list.hbs
+++ b/orga/app/templates/authenticated/sup-students/list.hbs
@@ -6,5 +6,6 @@
     @triggerFiltering={{this.triggerFiltering}}
     @lastNameFilter={{this.lastName}}
     @firstNameFilter={{this.firstName}}
+    @studentNumberFilter={{this.studentNumber}}
   />
 </div>
