Modify SCO temporary banner

--- a/certif/app/styles/globals/colors.scss
+++ b/certif/app/styles/globals/colors.scss
@@ -10,7 +10,8 @@ $black: #07142E;
 $pix-orga: #00DDFF;
 $pix-purplie: #6B20DC;
 $pix-purple: #8A49FF;
-$pix-certif-banner: #187F7C;
+$pix-certif-banner: #C4E8FF;
+$pix-certif-banner-text: #0069AB;
 // gradients
 $pix-green-gradient: linear-gradient(-45deg, #52D987 0%, #1A8C89 100%);
 // light
