--- a/certif/app/templates/authenticated.hbs
+++ b/certif/app/templates/authenticated.hbs
@@ -23,7 +23,6 @@
         </li>
       </ul>
     </nav>
-
     
   </aside>
 
@@ -36,10 +35,10 @@
     {{#if this.showBanner}}
       <PixBanner class="sco-temporary-banner">
         <span class="sco-temporary-banner__informations-text">
-          <FaIcon @icon="exclamation-triangle" class="sco-temporary-banner-informations-text__triangle-icon" />
+          <FaIcon @icon="info-circle" class="sco-temporary-banner-informations-text__triangle-icon" />
           <p>
-            Il est important de vérifier que les élèves soient certifiables avant de les inscrire en session de certification. <br>
-            Vous pouvez faire une <a href="https://view.genial.ly/5fda0b5aebe82c0d17f177ea " target="_blank" rel="noopener noreferrer">campagne de collecte de profil <FaIcon @icon="external-link-alt"/></a> pour vous en assurer.
+            La certification en collège et lycée est possible jusqu'au 25 juin. Pour reporter des sessions déjà programmées, il vous suffit de changer la date de la session en cliquant sur « modifier ».<br>
+            <a href="https://view.genial.ly/6077017b8b37870d98620200" target="_blank" rel="noopener noreferrer"> En savoir plus <FaIcon @icon="external-link-alt"/></a>
           </p>
         </span>
         <button type="button" class="sco-temporary-banner-button" {{on 'click' this.closeBanner}}>
